# ED_2023-02

./: README
taller1_2023-02/: CMakeLists.txt  Usuario.cpp  Usuario.h  main.cpp
taller1_2023-02/Software/: Software.cpp  Software.h
taller1_2023-02/Software/JUEGOS/: Juego.cpp  Juego.h
taller1_2023-02/Software/NAVEGADOR/: Navegador.cpp  Navegador.h
taller1_2023-02/Software/OFIMATICA/: Ofimatica.cpp  Ofimatica.h
taller1_2023-02/Software/PRODUCCION/: Produccion.cpp  Produccion.h
taller1_2023-02/Software/SEGURIDAD/: Seguridad.cpp  Seguridad.h
taller1_2023-02/Software/SOCIAL/: Social.cpp  Social.h
