cmake_minimum_required(VERSION 3.23)
project(taller1_2023_02)

set(CMAKE_CXX_STANDARD 14)

add_executable(taller1_2023_02 main.cpp Software/Software.cpp Software/Software.h Usuario.cpp Usuario.h Software/JUEGOS/Juego.cpp Software/JUEGOS/Juego.h Software/OFIMATICA/Ofimatica.cpp Software/OFIMATICA/Ofimatica.h Software/PRODUCCION/Produccion.cpp Software/PRODUCCION/Produccion.h Software/NAVEGADOR/Navegador.cpp Software/NAVEGADOR/Navegador.h Software/SEGURIDAD/Seguridad.cpp Software/SEGURIDAD/Seguridad.h Software/SOCIAL/Social.cpp Software/SOCIAL/Social.h)
